--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title> 
+    <title>Learing with while</title> 
 </head>
 <body>
     <header>
@@ -22,26 +22,22 @@
                 <h1>Learning <b>with while</b></h1>
             </div>
             <div class="nav-countand">
-                <li><a href="#" class="nav">home</a></li>
-                <li><a href="#" class="nav">about</a></li>
-                <li><a href="#" class="nav">servise</a></li>
-                <li><a href="#" class="nav">feedback</a></li>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                <i id="mode" class="fa-solid fa-mountain-sun"></i>
+                <li><a href="#home" class="nav">home</a></li>    
+                <li><a href="#answer" class="nav">Answer</a></li>
+                <li><a href="#feedback" class="nav">feedback</a></li>
+                <li><a href="#countact" class="nav">countact</a></li>
             </div>
             <i class="fa-solid fa-gear" id="myButton"></i> 
-        </div>
-    </header>
+          </div>
     <div class="menu" id="myImg">
         <div class="menu-countand">
-            <li><a href="#" class="nav">home</a></li>
-            <li><a href="#" class="nav">about</a></li>
-            <li><a href="#" class="nav">servise</a></li>
-            <li><a href="#" class="nav">feedback</a></li>
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            <i id="mode" class="fa-solid fa-mountain-sun"></i>
+            <li><a href="#home" class="nav">home</a></li>
+            <li><a href="#answer" class="nav">answer</a></li>
+            <li><a href="#feedback" class="nav">feedback</a></li> 
+            <li><a href="#countact" class="nav">countact</a></li>   
         </div>
     </div>
+  </header>
     <div class="home" id="home">
         <div class="home-countner">
             <div class="home-img">
@@ -57,19 +53,17 @@
                 <li>Part of A Cell</li>
                 <li>Comparison between plant and animal cell</li>
                 </h3><br><br>
-                <a href="cell-book-pdf.html" class="topic"><i class="fa-solid fa-book" id="icon"></i>&nbsp&nbsp PDF of chapter</a>
+                <a href="ch-1-book-img.pdf" class="topic"> PDF of chapter </a>
                 <br><br><br>
-                <a href="" class="topic"><i class="fa-solid fa-file" id="icon"></i>&nbsp&nbsp Question/answer</a>
+                <a href="#answer" class="topic"> Question/answer </a>
                 <br><br><br>
-                <a href="" class="topic"><i class="fa-solid fa-newspaper" id="icon"></i>&nbsp&nbsp Sampel paper</a>
+                <a href="" class="topic"> Sampel paper </a>
                 <br><br><br>
-                <a href="" class="topic"><i class="fa-solid fa-chalkboard-user" id="icon"></i>&nbsp&nbsp Explanation</a>
-                <br><br><br>
-                <a href="" class="topic"><i class="fa-solid fa-list" id="icon"></i>&nbsp&nbsp Other topic</a>
+                <a href="#chapter" class="topic"> Other topic </a>
             </div>
         </div>
     </div>  
-    <div class="topic-menu">
+    <div class="topic-menu" id="answer">
         <div class="topic-countaner">
             <h2>Page NO...</h2>
             <a href="#page-one" id="page-no">1</a>
@@ -123,7 +117,7 @@
         <div class="two-answer" id="page-two">
             <h1>B.&nbsp&nbspMatch the fllowing.</h1>
             <br>
-            <div class="match"></div>
+            <div class="match">
                 <h3>1.&nbsp Goligi complex &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(a) Genes</h3>
                 <h3>2.&nbsp Ribosomes &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(b) Cork</h3>
                 <h3>3.&nbsp Chromosomes &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(c) Chloroplasts</h3>
@@ -279,7 +273,7 @@
             <h4>[5]</h4>
         </div>
       </div>
-    <section class="main swiper mySwiper">
+    <section class="main swiper mySwiper" id="chapter">
         <div class="wrapper swiper-wrapper">
           <div class="slide swiper-slide">
             <img src="ch-1.png" alt="" class="image" />
@@ -300,7 +294,7 @@
                 Microorganisum: Friends <br />
                 or Foes
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-2/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -311,7 +305,7 @@
                 Metals and <br />
                 Non-Metals
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-3/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -322,7 +316,7 @@
                 Force and <br />
                 Pressure
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-4/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -332,7 +326,7 @@
               <h2>
                 Friction
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-5/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -343,7 +337,7 @@
                 Sources of <br />
                 Energy
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-6/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -353,7 +347,7 @@
               <h2>
                 Combution
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-7/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -364,7 +358,7 @@
                 Conservation of plants <br />
                 and Animals
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-8/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -375,7 +369,7 @@
                 Crop Production and <br />
                 Its Management
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-9/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -386,7 +380,7 @@
                 Refraction and Dispersion <br />
                 of light
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-10/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -397,7 +391,7 @@
                 The Human <br />
                 Eye
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-11/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -407,7 +401,7 @@
               <h2>
                 Sound
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-12/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -418,7 +412,7 @@
                 Synthetic Fibres <br />
                 and Plastics
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-13/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -429,7 +423,7 @@
                 Reproduction in <br />
                 Animals
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-14/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -440,7 +434,7 @@
                 Reaching the Age <br />
                 of Adolescence
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-15/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -451,7 +445,7 @@
                 Electric Current and <br />
                 Its Chemical Effect
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-16/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -462,7 +456,7 @@
                 Stars and Solar <br />
                 System
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-17/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -472,7 +466,7 @@
               <h2>
                 Earthquakes
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-18/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -483,7 +477,7 @@
                 Pollution of <br/>
                 Air
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-19/index.html" class="button">Read more</a>
             </div>
           </div>
           <div class="slide swiper-slide">
@@ -494,7 +488,7 @@
                 Pollution of <br/>
                 Water
               </h2>
-              <a href="#" class="button">Read more</a>
+              <a href="/cl-8/science-8/si-8-20/index.html" class="button">Read more</a>
             </div>
           </div>
         </div>
@@ -503,17 +497,8 @@
         <div class="swiper-button-prev nav-btn"></div>
         <div class="swiper-pagination"></div>
     </section>
-    <br><br><br><br>
-    <div class="other-countaner">
-     <div class="other-subject">
-      <h1>Other Topic</h1>
-      <li><a href="">Math &nbsp&nbsp&nbsp&nbsp&nbsp🔻</a></li>
-      <li><a href="">Sst &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp🔻</a></li> 
-      <li><a href="">English &nbsp🔻</a></li> 
-      <li><a href="">Hindi &nbsp&nbsp&nbsp&nbsp🔻</a></li> 
-     </div> 
-    </div>
-    <div class="feedback-container">
+    <br><br><br><br><br>
+    <div class="feedback-container" id="feedback">
       <h2>Feedback</h2>
       <input type="text" id="name-input" placeholder="Your Name" required>
       <div class="star-rating">
@@ -529,7 +514,7 @@
       <div id="feedback-output"></div>
   </div>
   <br><br><br><br><br>
-  <footer>
+  <footer id="countact">
     <div class="footer" id="contect">
       <h3>&nbsp&nbspFollow on &nbsp</h3>
       <div class="follow">
@@ -540,10 +525,9 @@
       </div> 
       <div class="list">
         <ul>
-         <li><a href="#home">HOME</a></li>
-         <li><a href="#About">ABOUT</a></li>
-         <li><a href="#topic">TOPIC</a></li>
-         <li><a href="#topic">FEEDBACK</a></li>
+          <li><a href="#home" class="nav">home</a></li>
+          <li><a href="#answer" class="nav">answer</a></li>
+          <li><a href="#feedback" class="nav">feedback</a></li>   
         </ul>
       </div> 
     </div>
